# learn-audio-dsp

./: .gitmodules  README.md
ch1/c/: CMakeLists.txt  main.c
ch1/python/: wav_copy.py
ch2/: melo_tts.py  whisper_stt.py
ch3/c/: CMakeLists.txt  main.c
ch3/python/: windowing.py
ch4/c/: CMakeLists.txt  main.c  wavwriter.c
ch4/python/: fft.py
ch5/c/: .gitattributes  CMakeLists.txt  main.cc  webrtc_audio_test.sln  webrtc_audio_test.vcxproj  webrtc_audio_test.vcxproj.filters
ch5/c/lib/: webrtc.lib
